care/force-app/main/default/objects/Agent_Work__c/Agent_Work__c.object-meta.xml
<CustomObject>
    <label>Agent Work</label>
    <nameField>
        <displayFormat>AW-{0000}</displayFormat>
        <label>Agent Work Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agents Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>