care/force-app/main/default/objects/Agent_Work__c/fields/Agent_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Agent_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agents_Work</relationshipName>
    <type>Lookup</type>
</CustomField>