care/force-app/main/default/objects/Agent_Work__c/fields/Agent_Text__c.field-meta.xml
<CustomField>
    <fullName>Agent_Text__c</fullName>
    <label>Agent Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>