care/force-app/main/default/objects/Agent_Work__c/fields/Agent_Work_Count_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Agent_Work_Count_Seconds__c</fullName>
    <formula>Agent_Work_Hours_Minutes__c  * 60</formula>
    <label>Agent Work Count (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>