care/force-app/main/default/objects/Agent_Work__c/fields/Agent_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Agent_Work_Hours__c</fullName>
    <formula>IF(NOT(ISBLANK(End_Date_Time__c)), TEXT(FLOOR((End_Date_Time__c  - Start_Date_Time__c )*24)) &amp;&apos; Hr &apos;&amp; TEXT(FLOOR(((((End_Date_Time__c  - Start_Date_Time__c )*24)-FLOOR((End_Date_Time__c- Start_Date_Time__c )*24))*60)))&amp;&apos; Mins&apos;,null )</formula>
    <label>Agent Work Hours</label>
    <type>Text</type>
</CustomField>