care/force-app/main/default/objects/Agent_Work__c/fields/Agent_Work_Hours_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Agent_Work_Hours_Minutes__c</fullName>
    <formula>IF(

NOT(ISBLANK(End_Date_Time__c)), 

(End_Date_Time__c-Start_Date_Time__c )*24*60, 

( NOW() -Start_Date_Time__c )*24*60)</formula>
    <label>Agent Work Hours(Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>