care/force-app/main/default/objects/Agent_Work__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Agents Work</relationshipLabel>
    <relationshipName>Agents_Work</relationshipName>
    <type>Lookup</type>
</CustomField>