care/force-app/main/default/objects/Agent_Work__c/fields/End_Date_Time_H_M_S_MS__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time_H_M_S_MS__c</fullName>
    <formula>IF( NOT(ISBLANK(End_Date_Time__c)),TEXT(TODAY())&amp;&quot; &quot;&amp;TEXT(TIMENOW()), null)</formula>
    <label>End Date/Time(H:M:S:MS)</label>
    <type>Text</type>
</CustomField>