care/force-app/main/default/objects/Agent_Work__c/fields/Start_Date_Time_H_M_S__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time_H_M_S__c</fullName>
    <label>Start Date/Time(H:M:S)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>