care/force-app/main/default/objects/Agent_Work__c/fields/Start_Date_Time_H_M_S_MS__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time_H_M_S_MS__c</fullName>
    <formula>IF(NOT(ISBLANK( Start_Date_Time__c)),TEXT(TODAY())&amp;&quot; &quot;&amp;TEXT(TIMENOW()), null)</formula>
    <label>Start Date/Time(H:M:S:MS)</label>
    <type>Text</type>
</CustomField>